// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Page Component test should test and take snapshot of LoginForm 1`] = `
<div>
  <form
    action="books.html"
    className="form-signin"
    onSubmit={[Function]}
  >
    <h5
      className="form-signin-heading text-center pull-center"
    >
      Please Login In
    </h5>
    
    <div
      className="row"
    >
      <div
        className="col input-field s12"
      >
        <input
          autoFocus={true}
          className="form-control validate"
          defaultValue={undefined}
          id="inputUsernamelog"
          name="username"
          onChange={[Function]}
          placeholder={undefined}
          required={true}
          type="text"
          value=""
        />
        <label
          className=""
          data-error={undefined}
          data-success={undefined}
          htmlFor="inputUsernamelog"
        >
          Username
        </label>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col input-field s12"
      >
        <input
          autoFocus={true}
          className="form-control validate"
          defaultValue={undefined}
          id="inputPassword"
          name="password"
          onChange={[Function]}
          placeholder="Password"
          required={true}
          type="password"
          value=""
        />
        <label
          className=""
          data-error={undefined}
          data-success={undefined}
          htmlFor="inputPassword"
        >
          Password
        </label>
      </div>
    </div>
    <div
      className="row"
    >
      <div>
        <input
          className="filled-in checkbox-orange"
          defaultChecked="checked"
          id="filled-in-box"
          label="Remember me?"
          name="group1"
          type="checkbox"
          value=""
        />
        <label
          htmlFor="filled-in-box"
        >
          Remember me?
        </label>
      </div>
    </div>
    <button
      className="btn btn-lg btn-primary  btn-block"
      id="loginbtn"
      type="submit"
    >
      Sign in
    </button>
    <div
      data-onsuccess={[Function]}
      id="g-signin2"
      onClick={[Function]}
      style={
        Object {
          "marginLeft": "1px",
          "marginTop": "10px",
        }
      }
    />
    <p>
      <label
        htmlFor="forgot_pass"
      >
        <button
          id="forgot_pass"
          onClick={[Function]}
          type="button"
        >
           Forgot Password ? 
        </button>
      </label>
    </p>
    <a
      className=""
      href="/signup"
      id="createbtn"
    >
       
      <b>
        Create account
      </b>
    </a>
  </form>
</div>
`;

exports[`Login Page Component test should test and take snapshot of LoginPage 1`] = `
<div>
  <div
    className="row"
    id="logininForm"
  >
    <div>
      <form
        action="books.html"
        className="form-signin"
        onSubmit={[Function]}
      >
        <h5
          className="form-signin-heading text-center pull-center"
        >
          Please Login In
        </h5>
        <p
          className="help-block"
          style={
            Object {
              "color": "red",
            }
          }
        >
          *
          error
          *
        </p>
        <div
          className="row"
        >
          <div
            className="col input-field s12"
          >
            <input
              autoFocus={true}
              className="form-control validate"
              defaultValue={undefined}
              id="inputUsernamelog"
              name="username"
              onChange={[Function]}
              placeholder={undefined}
              required={true}
              type="text"
              value=""
            />
            <label
              className=""
              data-error={undefined}
              data-success={undefined}
              htmlFor="inputUsernamelog"
            >
              Username
            </label>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col input-field s12"
          >
            <input
              autoFocus={true}
              className="form-control validate"
              defaultValue={undefined}
              id="inputPassword"
              name="password"
              onChange={[Function]}
              placeholder="Password"
              required={true}
              type="password"
              value=""
            />
            <label
              className=""
              data-error={undefined}
              data-success={undefined}
              htmlFor="inputPassword"
            >
              Password
            </label>
          </div>
        </div>
        <div
          className="row"
        >
          <div>
            <input
              className="filled-in checkbox-orange"
              defaultChecked="checked"
              id="filled-in-box"
              label="Remember me?"
              name="group1"
              type="checkbox"
              value=""
            />
            <label
              htmlFor="filled-in-box"
            >
              Remember me?
            </label>
          </div>
        </div>
        <button
          className="btn btn-lg btn-primary  btn-block"
          id="loginbtn"
          type="submit"
        >
          Sign in
        </button>
        <div
          data-onsuccess={[Function]}
          id="g-signin2"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "1px",
              "marginTop": "10px",
            }
          }
        />
        <p>
          <label
            htmlFor="forgot_pass"
          >
            <button
              id="forgot_pass"
              onClick={[Function]}
              type="button"
            >
               Forgot Password ? 
            </button>
          </label>
        </p>
        <a
          className=""
          href="/signup"
          id="createbtn"
        >
           
          <b>
            Create account
          </b>
        </a>
      </form>
    </div>
  </div>
  <footer
    className="footer-distributed "
  >
    <div
      className="row"
    >
      <div
        className=" col l12 col m12 col s12"
      >
        <div
          className="footer-left col l4 col m4 col s12"
        >
          <h3>
            Hello
            <span>
              Books
            </span>
          </h3>
          <p
            className="footer-links"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Home
            </a>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Blog
            </a>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Pricing
            </a>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              About
            </a>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Faq
            </a>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              Contact
            </a>
          </p>
          <p
            className="footer-company-name"
          >
            Tosmak © 2017
          </p>
        </div>
        <div
          className="footer-center col l4 col m4 col s12"
        >
          <div>
            <i
              className="fa fa-map-marker"
            />
            <p>
              <span>
                21 Ori-oke Street
              </span>
               Lagos, Nigeria
            </p>
          </div>
          <div>
            <i
              className="fa fa-phone"
            />
            <p>
              08127112053
            </p>
          </div>
          <div>
            <i
              className="fa fa-envelope"
            />
            <p>
              <a
                href="tosmak16@gmail.com"
                onClick={[Function]}
                style={Object {}}
              >
                tosmak16@gmail.com
              </a>
            </p>
          </div>
        </div>
        <div
          className="footer-right col l4 col m14 col s12"
        >
          <div
            className="footer-company-about"
          >
            <span>
              About Hello Book
            </span>
            <p>
              it is a simple application that helps manage a library and its processes like stocking,tracking and renting books
            </p>
          </div>
          <div
            className="footer-icons"
          >
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-facebook"
              />
            </a>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-twitter"
              />
            </a>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-linkedin"
              />
            </a>
            <a
              onClick={[Function]}
              style={Object {}}
            >
              <i
                className="fa fa-github"
              />
            </a>
          </div>
        </div>
      </div>
    </div>
  </footer>
</div>
`;

exports[`Login Page Component test should test and take snapshot of connected loginpPage 1`] = `
<connectLoginPage
  getBooks={[Function]}
  googleAuthSignIn={[Function]}
  log={
    Object {
      "error": "error",
    }
  }
  resetPasswordStatus=""
  resetUserPassword={[Function]}
  userSignin={[Function]}
/>
`;
